// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigating between routes given route with optional path parameters when navigating to route with path parameters renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <pre>
    {
  "someParameter": "some-value",
  "someOtherParameter": "some-other-value"
}
  </pre>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`navigating between routes given route without path parameters when navigating to route renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div>
    Some component
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;
